--- a/style/style2.css
+++ b/style/style2.css
@@ -57,3 +57,16 @@
 .image1:hover, .image2:hover, .image3:hover, .image4:hover {
     transform: scale(1.4);
 }
+
+@media (max-width: 768px) {
+    .text h1 {
+        font-size: 5vw; 
+    }
+
+    .image1,
+    .image2,
+    .image3,
+    .image4 {
+        width: 40%; 
+    }
+}
