--- a/style/style344.css
+++ b/style/style344.css
@@ -14,8 +14,8 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px; /* Sesuaikan tinggi container dengan tinggi .persegi */
-    background-color: rgba(255, 255, 255, 0.7); /* Warna latar belakang container */
+    height: 80px; 
+    background-color: rgba(255, 255, 255, 0.7); 
     z-index: 1; /* Menempatkan container di bawah .persegi */
 }
 
