--- a/style/style2.css
+++ b/style/style2.css
@@ -60,13 +60,14 @@
 
 @media (max-width: 768px) {
     .text h1 {
-        font-size: 5vw; 
+        font-size: 5vw;
     }
 
     .image1,
     .image2,
     .image3,
     .image4 {
-        width: 40%; 
+        width: 1%; 
+        position: absolute;
     }
 }
