--- a/style/style.css
+++ b/style/style.css
@@ -71,11 +71,11 @@ body{
 @media (max-width: 768px) {
     .button,
     .text .button {
-        width: 30%; /* Adjust width for smaller screens */
+        width: 30%; 
     }
 
     .text h1,
     .text p {
-        font-size: 3vw; /* Adjust font size for smaller screens */
+        font-size: 3vw; 
     }
 }
