--- a/style/style4.css
+++ b/style/style4.css
@@ -2,6 +2,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    display: flex;
 }
 
 body {
@@ -19,10 +20,7 @@ body {
     z-index: 1; /* Menempatkan container di bawah .persegi */
 }
 
-.container #logo{
-    width: auto;
-    height: auto;
-}
+
 .gitar-item {
     width: 0%;
     height: 20%;
